2007-08-28 [colin]	2.10.0cvs180

	* src/compose.c
	* src/compose.h
		Fix signature replacement when it's been wrapped

2007-08-27 [colin]	2.10.0cvs179

	* src/summaryview.c
		Fix indentation

2007-08-27 [colin]	2.10.0cvs178

	* src/summaryview.c
		Fix Quicksearch's Sticky mode

2007-08-27 [colin]	2.10.0cvs177

	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/imap_gtk.c
	* src/mh_gtk.c
		Fix loss of subfolders properties when
		renaming a folder

2007-08-26 [wwp]	2.10.0cvs176

	* src/alertpanel.c
	* src/messageview.c
	* src/prefs_actions.c
		Revert parts of 2.10.0cvs174: g_markup_printf_escaped()
		will have to be used when necessary *before* calling
		alertpanel functions.

2007-08-25 [paul]	2.10.0cvs175

	* src/prefs_actions.c
		workaround gettext problem marking
		string as c-format when it's not

2007-08-25 [wwp]	2.10.0cvs174

	* src/alertpanel.c
	* src/messageview.c
	* src/prefs_actions.c
		Call the pango markup escape function right ince in alertpanel_create
		instead of everywhere (reverts some parts of 2.10.0cvs123 and
		2.10.0cvs158).

	* src/common/log.c
		Fix a crash due to a misuse of g_print(), encountered when the string
		passed to g_print was containing printf substitution symbols.

2007-08-25 [paul]	2.10.0cvs173

	* src/common/log.c
		fix a segfault when refreshing RSSyl feeds

2007-08-25 [paul]	2.10.0cvs172

	* src/gtk/icon_legend.c
		add watchthread.xpm

2007-08-25 [paul]	2.10.0cvs171

	* src/Makefile.am
	* src/stock_pixmap.c
	* src/pixmaps/insert_file.xpm
		add a new pixmap instead of re-using
		paste.xpm. (easier for icon theme authors)

2007-08-24 [holger]	2.10.0cvs170

	* src/plugins/trayicon/trayicon.c
		The same fix for another hook id.

2007-08-24 [holger]	2.10.0cvs169

	* src/plugins/trayicon/trayicon.c
		Micro-fix: Do the error checking for
		the right hook id.

2007-08-24 [paul]	2.10.0cvs168

	* src/folder.h
		fix typo causing compiler warning

2007-08-24 [paul]	2.10.0cvs167

	* README